--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-KAFKA_INTERNET_HOST=123.123.123.123
+KAFKA_INTERNET_HOST=192.168.0.123
 KAFKA_INTERNET_PORT=9093
 KAFKA_SSL_KEY_PASSWORD=YourPassword
 KAFKA_MANAGER_PORT=9000
 KAFKA_DEFAULT_TOPIC=default
+KAFKA_CLUSTER_NAME=test-cluster
+CA_COMMON_NAME=your@email.com
+CA_ORGANIZATION_UNIT=Osvlabs
+CA_ORGANIZATION=ShinetechZZ
+CA_LOCALITY=Zhengzhou
+CA_STATE=Henan
+CA_COUNTRY=CN
