Update docker-compose to fix something

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-KAFKA_INTERNET_HOST=192.168.0.123
+KAFKA_INTERNET_HOST=localhost
 KAFKA_INTERNET_PORT=9093
 KAFKA_SSL_KEY_PASSWORD=YourPassword
 KAFKA_MANAGER_PORT=9000
