--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ KAFKA_INTERNET_HOST=localhost
 KAFKA_INTERNET_PORT=9093
 KAFKA_SSL_KEY_PASSWORD=YourPassword
 KAFKA_MANAGER_PORT=9000
-KAFKA_DEFAULT_TOPIC=default
+KAFKA_CREATE_TOPICS=default:1:1
 KAFKA_CLUSTER_NAME=test-cluster
 CA_COMMON_NAME=your@email.com
 CA_ORGANIZATION_UNIT=Osvlabs
