--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - $KAFKA_INTERNET_PORT:9093
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_CREATE_TOPICS: "${KAFKA_DEFAULT_TOPIC}:1:1"
+      KAFKA_CREATE_TOPICS: $KAFKA_CREATE_TOPICS
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENERS: PLAINTEXT://:9092,SSL://:9093
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://:9092,SSL://$KAFKA_INTERNET_HOST:$KAFKA_INTERNET_PORT
