--- a/configs/client-ssl.properties
+++ b/configs/client-ssl.properties
@@ -44,7 +44,7 @@
 # the total bytes of memory the producer can use to buffer records waiting to be sent to the server
 #buffer.memory=
 
-security.protocol=SSL
+security.protocol=${KAFKA_SECURITY_PROTOCOL}
 ssl.truststore.location=/certificates/kafka.truststore
 ssl.truststore.password=${KAFKA_SSL_KEY_PASSWORD}
 ssl.truststore.type=JKS
