--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ KAFKA_SSL_KEY_PASSWORD=YourPassword
 KAFKA_MANAGER_PORT=9000
 KAFKA_CREATE_TOPICS=default:1:1
 KAFKA_CLUSTER_NAME=test-cluster
+KAFKA_SECURITY_PROTOCOL=SSL
+KAFKA_SSL_CLIENT_AUTH=required
 CA_COMMON_NAME=your@email.com
 CA_ORGANIZATION_UNIT=Osvlabs
 CA_ORGANIZATION=ShinetechZZ
