--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,8 @@ services:
       KAFKA_SSL_KEY_PASSWORD: $KAFKA_SSL_KEY_PASSWORD
       KAFKA_SSL_TRUSTSTORE_LOCATION: /certificates/kafka.truststore
       KAFKA_SSL_TRUSTSTORE_PASSWORD: $KAFKA_SSL_KEY_PASSWORD
-      KAFKA_SSL_CLIENT_AUTH: required
+      KAFKA_SSL_CLIENT_AUTH: $KAFKA_SSL_CLIENT_AUTH
+      KAFKA_SECURITY_PROTOCOL: $KAFKA_SECURITY_PROTOCOL
       KAFKA_SSL_ENABLED_PROTOCOLS: TLSv1.2,TLSv1.1,TLSv1
       KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: ""
     depends_on: 
