--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,22 +16,17 @@ services:
   kafka:
     image: wurstmeister/kafka:2.13-2.6.0
     ports:
-      - $KAFKA_INTERNET_PORT:9093
+      - 9092:9092
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_CREATE_TOPICS: $KAFKA_CREATE_TOPICS
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: PLAINTEXT://:9092,SSL://:9093
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://:9092,SSL://$KAFKA_INTERNET_HOST:$KAFKA_INTERNET_PORT
-      KAFKA_SSL_KEYSTORE_LOCATION: /certificates/kafka.keystore
-      KAFKA_SSL_KEYSTORE_PASSWORD: $KAFKA_SSL_KEY_PASSWORD
-      KAFKA_SSL_KEY_PASSWORD: $KAFKA_SSL_KEY_PASSWORD
-      KAFKA_SSL_TRUSTSTORE_LOCATION: /certificates/kafka.truststore
-      KAFKA_SSL_TRUSTSTORE_PASSWORD: $KAFKA_SSL_KEY_PASSWORD
-      KAFKA_SSL_CLIENT_AUTH: $KAFKA_SSL_CLIENT_AUTH
-      KAFKA_SECURITY_PROTOCOL: $KAFKA_SECURITY_PROTOCOL
-      KAFKA_SSL_ENABLED_PROTOCOLS: TLSv1.2,TLSv1.1,TLSv1
-      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: ""
+      KAFKA_LISTENERS: PLAINTEXT://:29092,PLAINTEXT_HOST://:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://$KAFKA_INTERNET_HOST:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_CREATE_TOPICS: $KAFKA_CREATE_TOPICS
+      KAFKA_SECURITY_PROTOCOL: PLAINTEXT
     depends_on: 
       - zookeeper
     networks:
@@ -40,14 +35,14 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./certificates:/certificates
 
-  manager:
-    image: sheepkiller/kafka-manager:stable
-    environment:
-      ZK_HOSTS: zookeeper:2181
-      APPLICATION_SECRET: LetMeIn
-    networks:
-      - backend
-    depends_on:
-      - zookeeper
-    ports:
-      - ${KAFKA_MANAGER_PORT}:9000
+        #manager:
+        #image: sheepkiller/kafka-manager:stable
+        #environment:
+        #ZK_HOSTS: zookeeper:2181
+        #APPLICATION_SECRET: LetMeIn
+        #networks:
+        #- backend
+        #depends_on:
+        #- zookeeper
+        #ports:
+        #- ${KAFKA_MANAGER_PORT}:9000
